<resources>
    <string name="app_name">PC - Parent</string>
    <string name="welcomeMsg">Welcome</string>
    <string name="calls">Calls</string>
    <string name="sms">Messages</string>
    <string name="location">Location</string>
    <string name="date_time">Date-Time:</string>
    <string name="caller">Number:</string>
    <string name="duration">Duration:</string>
    <string name="status">Status:</string>
    <string name="type">Type:</string>
    <string name="message">Message:</string>
    <string name="number">Number:</string>
    <string name="messages">Messages</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="locations">Locations</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="view_on_map">VIEW ON MAP ☸</string>
</resources>